--- a/eureka-provider/src/main/resources/application.yml
+++ b/eureka-provider/src/main/resources/application.yml
@@ -12,3 +12,12 @@ server:
 spring:
   application:
     name: provider
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
+  endpoint:
+    shutdown:
+      enabled: true
