--- a/eureka-server/src/main/resources/application.yml
+++ b/eureka-server/src/main/resources/application.yml
@@ -1,19 +1,16 @@
-#eureka:
-#  client:
-#    #是否从eureka server获取注册信息，由于单节点，不需要同步其他节点数据，用false
-#    fetch-registry: false
-#    #是否将自己注册到Eureka Server,默认为true，由于当前就是server，故而设置成false，表明该服务不会向eureka注册自己的信息
-#    register-with-eureka: false
-#    #设置服务注册中心的URL，用于client和server端交流
-#    service-url:
-#      defaultZone: http://euk1.com/eureka/
-#  instance:
-#    # eureka节点名称
-#    appname: euk1.com
-#spring:
-#  application:
-#    name: euk1.com
-
+eureka:
+  client:
+    #是否从eureka server获取注册信息，由于单节点，不需要同步其他节点数据，用false
+    fetch-registry: false
+    #是否将自己注册到Eureka Server,默认为true，由于当前就是server，故而设置成false，表明该服务不会向eureka注册自己的信息
+    register-with-eureka: false
+    #设置服务注册中心的URL，用于client和server端交流
+    service-url:
+      defaultZone: http://euk1.com/eureka/
+  instance:
+    # eureka节点名称
+    appname: euk1.com
 spring:
-  profiles:
-    active: euk2
+  application:
+    name: euk1.com
+
